--- a/css/base.css
+++ b/css/base.css
@@ -185,7 +185,7 @@ section {
 .margin-b-4 {
   margin-bottom: 4px;
 }
-h1 {
+#sub_h1 {
   /* font-family: kepler-std-display, serif; */
   font-size: var(--font-size-main);
   line-height: 1;
@@ -426,7 +426,7 @@ aside.on a:hover svg {
     grid-column: 1 / 7;
     margin-top: 28px;
   }
-  h1 {
+  #sub_h1 {
     font-size: var(--font-size-main-m);
   }
   h2 {
