--- a/css/imgbase.css
+++ b/css/imgbase.css
@@ -147,7 +147,7 @@ section {
 }
 .margin-r-6{margin-right:6px;}
 .margin-b-4{margin-bottom:4px;}
-h1 {
+#sub_h1 {
   font-family: kepler-std-display, serif;
   font-size: var(--font-size-main);
   line-height: 1;
@@ -308,7 +308,7 @@ aside.on a:hover svg {
     grid-column: 1 / 7;
     margin-top:28px;
   }
-  h1 {
+  #sub_h1 {
     font-size: var(--font-size-main-m);
   }
   h2 {
