--- a/css/index.css
+++ b/css/index.css
@@ -200,18 +200,18 @@ nav ol li a {
   left: 0;
   right: 0;
 }
-#Home .textarea #sub_h1 {
+#Home .textarea h1 {
   grid-column: 3 / 13;
 }
-#Home #sub_h1 p:nth-child(1){
+#Home h1 p:nth-child(1){
   font-weight: 800;
 }
-#Home #sub_h1 span{
+#Home h1 span{
   font-weight: 600;
   font-size: 7.2rem;
   /* color: var(--primary-color); */
 }
-#Home #sub_h1 p:nth-child(3){
+#Home h1 p:nth-child(3){
   font-weight: 300;
   letter-spacing: 1.7rem;
 }
@@ -581,13 +581,13 @@ nav ol li a {
   /* home */
   #Home {
   }
-  #Home .textarea #sub_h1 {
+  #Home .textarea h1 {
     grid-column: 2 / 6;
   }
-  #Home #sub_h1 span{
+  #Home h1 span{
     font-size: 2.9rem;
   }
-  #Home #sub_h1 p:nth-child(3){
+  #Home h1 p:nth-child(3){
     letter-spacing: 0.65rem;
   }
 
