--- a/css/imgbase.css
+++ b/css/imgbase.css
@@ -153,6 +153,12 @@ h1 {
   line-height: 1;
   text-align: left;
 }
+#sub_h1{
+  font-family: kepler-std-display, serif;
+  font-size: var(--font-size-main);
+  line-height: 1;
+  text-align: left;
+}
 h2 {
   font-family: kepler-std-display, serif;
   font-size: var(--font-size-title);
@@ -309,6 +315,9 @@ aside.on a:hover svg {
     margin-top:28px;
   }
   h1 {
+    font-size: var(--font-size-main-m);
+  }
+  #sub_h1{
     font-size: var(--font-size-main-m);
   }
   h2 {
