--- a/css/base.css
+++ b/css/base.css
@@ -193,6 +193,14 @@ h1 {
   text-transform:uppercase ;
 }
 
+#sub_h1{
+  font-size: var(--font-size-main);
+  line-height: 1;
+  text-align: left;
+  text-transform:uppercase ;
+}
+
+
 h2 {
   /* font-family: kepler-std-display, serif; */
   font-size: var(--font-size-title);
@@ -427,6 +435,9 @@ aside.on a:hover svg {
     margin-top: 28px;
   }
   h1 {
+    font-size: var(--font-size-main-m);
+  }
+  #sub_h1{
     font-size: var(--font-size-main-m);
   }
   h2 {
