--- a/css/base.css
+++ b/css/base.css
@@ -185,13 +185,13 @@ section {
 .margin-b-4 {
   margin-bottom: 4px;
 }
-/* h1 {
-  font-family: kepler-std-display, serif;
+h1 {
+  /* font-family: kepler-std-display, serif; */
   font-size: var(--font-size-main);
   line-height: 1;
   text-align: left;
   text-transform:uppercase ;
-} */
+}
 
 #sub_h1{
   font-size: var(--font-size-main);
