--- a/css/mintingInfo.css
+++ b/css/mintingInfo.css
@@ -395,13 +395,17 @@ section .imgarea > div{
   height: 100%;
 }
 .section8 .textarea p:nth-child(1){
-  font-size: 4rem;
-  font-weight: 600;
+  width: 50%;
+  text-align: right;
+  font-size: 2.5rem;
+  font-weight: 300;
+
 }
 .section8 .textarea p:nth-child(2){
-  font-size: 2.6rem;
-  font-weight: 600;
-  color:var(--secondary-active-color);
+  width: 55%;
+  text-align: right;
+  font-size: 2.5rem;
+  font-weight: 300;
 }
 
 
@@ -476,14 +480,20 @@ section .imgarea > div{
 
 .presale{
   border-radius: 20px;
-  background-color: var(--secondary-disabled-color);
+  background-color: #C6DEDC;
   padding: 10px 10px;
   margin-top:20px
 }
 .presale p{
-
   width:620px;
   margin:0 auto;
+  text-align: center;
+}
+
+.presale a{
+  width:620px;
+  margin:0 auto;
+  text-align: center;
 }
 
 .nft-address{
