--- a/css/mintingInfo.css
+++ b/css/mintingInfo.css
@@ -395,17 +395,13 @@ section .imgarea > div{
   height: 100%;
 }
 .section8 .textarea p:nth-child(1){
-  width: 50%;
-  text-align: right;
-  font-size: 2.5rem;
-  font-weight: 300;
-
+  font-size: 4rem;
+  font-weight: 600;
 }
 .section8 .textarea p:nth-child(2){
-  width: 55%;
-  text-align: right;
-  font-size: 2.5rem;
-  font-weight: 300;
+  font-size: 2.6rem;
+  font-weight: 600;
+  color:var(--secondary-active-color);
 }
 
 
@@ -480,20 +476,14 @@ section .imgarea > div{
 
 .presale{
   border-radius: 20px;
-  background-color: #C6DEDC;
+  background-color: var(--secondary-disabled-color);
   padding: 10px 10px;
   margin-top:20px
 }
 .presale p{
-  width:620px;
-  margin:0 auto;
-  text-align: center;
-}
 
-.presale a{
   width:620px;
   margin:0 auto;
-  text-align: center;
 }
 
 .nft-address{
