--- a/css/index.css
+++ b/css/index.css
@@ -482,9 +482,6 @@ nav ol li a {
 }
 
 .thesandbox-img>div img {
-  width: 15%;
-  position: absolute;
-  left: 16px;
   top: 16px;
   border: 2px solid #e6e6e8;
 }
@@ -495,12 +492,27 @@ nav ol li a {
 
 .thesandbox-img-2>div {
   width: 100%;
-  padding-bottom: 100%;
   position: relative;
   overflow: hidden;
 }
 
 .thesandbox-img-2 video {
+  height: 100%;
+  width: auto;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.thesandbox-img-3>div {
+  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.thesandbox-img-3 video {
   height: 100%;
   width: auto;
   position: absolute;
