--- a/css/index.css
+++ b/css/index.css
@@ -486,39 +486,26 @@ nav ol li a {
   border: 2px solid #e6e6e8;
 }
 
-.thesandbox-img video {
+.thesandbox-img img {
   width: 100%;
 }
 
 .thesandbox-img-2>div {
   width: 100%;
   position: relative;
-  overflow: hidden;
 }
 
-.thesandbox-img-2 video {
+.thesandbox-img-2 img {
   height: 100%;
-  width: auto;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .thesandbox-img-3>div {
   width: 100%;
   padding-bottom: 100%;
-  position: relative;
-  overflow: hidden;
 }
 
-.thesandbox-img-3 video {
+.thesandbox-img-3 img {
   height: 100%;
-  width: auto;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 /* This keeps child nodes hidden while the element loads */
